# simple_leg

./: .gitignore  README.md  simple_leg.code-workspace
simple_leg/: CMakeLists.txt  package.xml
simple_leg_controllers/: CMakeLists.txt  package.xml  plugins.xml  simple_leg_hw_sim_plugin.xml
simple_leg_controllers/include/simple_leg_controllers/: leg_position_controller.h  leg_position_interface.h  realhw.h  simple_leg_hw.h  simple_leg_hw_sim.h  simple_leg_spec.h
simple_leg_controllers/launch/: realhw_control.launch  realhw_world.launch  simhw_control.launch  simhw_world.launch  simple_leg.launch  simple_leg_sim_control.launch  simple_leg_sim_world.launch
simple_leg_controllers/src/: leg_position_controller.cpp  realhw.cpp  realhw_control.cpp  simple_leg_control.cpp  simple_leg_hw.cpp
simple_leg_controllers/src/simple_leg/: CMakeLists.txt  leg_position_publisher.cpp  simple_leg_control.cpp  simple_leg_hw.cpp  simple_leg_hw_sim.cpp
simple_leg_description/: CMakeLists.txt  package.xml
simple_leg_description/rviz/: realhw_world.rviz  simhw_world.rviz  simple_leg.rviz
simple_leg_description/urdf/: trobo.urdf  trobo_sim.urdf
simple_leg_description/xacro/: simple_leg.xacro  simple_leg_macro.xacro
simple_leg_msgs/: CMakeLists.txt  package.xml
simple_leg_msgs/msg/: leg_command.msg
