<?xml version="1.0"?>
<package format="2">
  <name>simple_leg</name>
  <version>0.0.0</version>
  <description>The simple_leg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="f.thlover398@gmail.com"> Hayato Ota </maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>simple_leg_msgs</exec_depend>
  <exec_depend>simple_leg_controllers</exec_depend>
  <exec_depend>simple_leg_description</exec_depend>

  <export><metapackage/></export>
</package>
